# parallel_graph_matching

./: .gitignore  CMakeLists.txt  README.md  create_subgraph.cpp  match.cpp  match.h  nsd.cpp  nsd.h  reorder_mtx.cpp  run.sh  test_nsd.cpp  test_sequential.cpp
doc/: project_presentation.pptx
graphs/: delaunay16k.mtx  kohonen.mtx  test.mtx  wikivote.mtx  wikivote_sorted.mtx  wikivote_subgraph1000.mtx  yeast_subgraph500.mtx
graphs/pfinan512/: pfinan512.mtx  pfinan512_sorted.mtx
graphs/subgraph/: small.mtx
graphs/usroads-48/: usroads-48_coord.mtx
graphs/yeast/: yeast_sorted.mtx
results/: wikivote-wikivote_sub1000.res  wikivote-wikivote_sub1000.res.bug  yeast-yeast.res  yeast-yeast_sub1000.res  yeast-yeast_sub1000.res.bug  yeast-yeast_sub500.res.1  yeast-yeast_sub500.res.2  yeast-yeast_sub500.res.3  yeast-yeast_sub500.res.4  yeast-yeast_sub500.res.5  yeast-yeast_sub500.res.bug
